--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
+    "formidable": "^2.0.1",
     "fs-extra": "^10.1.0",
     "mssql": "^8.1.1",
     "nodemon": "^2.0.16"
